Criado fields endereço

--- a/styles/forms.css
+++ b/styles/forms.css
@@ -1,4 +1,6 @@
 @import url(fields/index.css);
+@import url(fields/droparea.css);
+
 form{
     margin-top: 3rem;
 }
@@ -13,4 +15,8 @@ fieldset{
 legend{
     font: 600 1rem/1.25 var(--font-family);
     margin-bottom: 1.5rem;
+}
+
+fieldset + fieldset {
+    margin-top: 3rem;
 }
