--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -18,7 +18,8 @@ label {
 
 input:focus,
 select:focus,
-textarea:focus {
+textarea:focus,
+input[type="date"]:focus-within {
   outline: 0.25rem solid var(--surface-secondary);
   border: 0.125rem solid var(--stroke-highlight);
 }
@@ -66,4 +67,38 @@ input[type="date"] {
 select {
   background: url(../../assets/icones/arrow-down-01.svg) no-repeat
     calc(100% - 1rem);
+}
+
+input {
+  &[disabled] {
+    background-color: var(--surface-disabled);
+    border: 1px solid var(--stroke-default);
+    color: var(--text-primary);
+  }
+
+  &:invalid{
+    border: 0.125rem solid var(--semantic-error);
+  }
+
+  & + small {
+    font: var(--text-sm);
+    color: #78716c;
+    display: inline-block;
+    margin-top: .25rem;
+  }
+
+  &[required] + .error {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+
+    font: var(--text-sm);
+    color: var(--semantic-error);
+
+    margin-top: 0.25rem;
+  }
+
+  &:valid + .error {
+    display: none;
+  }
 }
