--- a/styles/global.css
+++ b/styles/global.css
@@ -55,3 +55,17 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.flex {
+  display: flex;
+  gap: 20px;
+}
+
+.flex-1 {
+  flex:1;
+}
+
+.flex-2 {
+  flex: 2;
+}
+
